--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "koa-views": "^6.2.0",
     "mysql2": "^2.1.0",
     "redis": "^3.0.2",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
